traces/bug_572.txt
src/fflib/lex.cpp:732: error: DEAD_STORE
  The value written to &ii (type int) is never used.
Showing all 1 steps of the trace


src/fflib/lex.cpp:732:17: Write of unused value
730.                   item ="";
731.                  
732.                   ii = source().peek();
                       ^
733.               }
734.              
